# chaindots-dockerized-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/post/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py  0002_initial.py
apps/user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
core/: settings.py  urls.py
postgres/: Dockerfile
tests/: conftests.py  test_posts.py  test_users.py
utils/: pagination.py  permissions.py
